--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.app-header{
+  border-bottom: 1px solid black;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  display: flex;
+  height: 50px;
+  background-color: #343a40;
+  color: aliceblue;
+}
+
+/* .app-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 16px;
+  row-gap: 16px;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+} */
+
+
+.CoverImg{
+  background-image : url("https://cutewallpaper.org/21/4k-anime-landscape-wallpaper/Anime-Girl-Sky-Clouds-Sunrise-Scenery-4K-Wallpaper-67.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* position: relative;  */
+  padding-top: 8rem;
+  padding-bottom: 8rem; 
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addFont{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: bolder;
 }
