--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap");
 
-.App {
+.App,
+html {
   background-color: #212529;
 }
 
