--- a/src/pages/Index.css
+++ b/src/pages/Index.css
@@ -31,13 +31,21 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   height: 100%;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: white;
+  /* @media only screen and (max-width: 1200px) {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+  @media (min-width: 600px) {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  } */
 }
 
 .addFont {
