delete some memory

--- a/src/pages/components/Footer.css
+++ b/src/pages/components/Footer.css
@@ -1,12 +1,17 @@
 a{
     font-size: 25px;
     margin-left: 3%;
+    
 }
 
 a :hover{
     color: rgb(85, 84, 84);
+    /* color: black; */
 }
+
 
 i{
     color: #ffff;
+    cursor:not-allowed
+    /* color: black; */
 }
